Fix images overflowing/zooming cells; constrain to box

--- a/src/styles.css
+++ b/src/styles.css
@@ -860,14 +860,15 @@ body {
 .cell-image-wrap {
   position: relative;
   flex: 1;
+  min-width: 0;
   min-height: 0;
-  display: flex;
 }
 
 .cell-image {
+  position: absolute;
+  inset: 0;
   width: 100%;
   height: 100%;
-  max-height: 100%;
   border-radius: 7px;
   display: block;
   object-fit: contain;
@@ -875,9 +876,10 @@ body {
 }
 
 .cell-video {
+  position: absolute;
+  inset: 0;
   width: 100%;
   height: 100%;
-  max-height: 100%;
   border-radius: 7px;
   display: block;
   object-fit: contain;
